rework jpkg into pkgbuild