@@ -1,5 +1,5 @@
 plugins {
-    kotlin("jvm") apply false
+    kotlin("jvm")
 }
 
 allprojects {
@@ -8,4 +8,38 @@ allprojects {
     repositories {
         mavenCentral()
     }
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(24)
+    }
+}
+
+tasks.register<Exec>("build_freebsd") {
+    val javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(24)
+    }.get()
+    environment(
+        "java_cmd",
+        buildString {
+            append(javaLauncher.executablePath.asFile.absolutePath)
+            append(" --enable-native-access=ALL-UNNAMED")
+        }
+    )
+    executable = file("build_freebsd.sh").path
+}
+
+tasks.register<Exec>("build_generic") {
+    val javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(24)
+    }.get()
+    environment(
+        "java_cmd",
+        buildString {
+            append(javaLauncher.executablePath.asFile.absolutePath)
+            append(" --enable-native-access=ALL-UNNAMED")
+        }
+    )
+    executable = file("build_generic.sh").path
 }
